--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="src/sass/main.css" />
-    <script defer src="src/js/controller.js"></script>
+    <link rel="stylesheet" href="sass/main.css" />
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -19,7 +18,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        <img src="img/logo.png" alt="Logo" class="header__logo" />
         <form class="search">
           <input
             type="text"
@@ -28,7 +27,7 @@
           />
           <button class="btn search__btn">
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-search"></use>
+              <use href="img/icons.svg#icon-search"></use>
             </svg>
             <span>Search</span>
           </button>
@@ -39,7 +38,7 @@
             <li class="nav__item">
               <button class="nav__btn nav__btn--add-recipe">
                 <svg class="nav__icon">
-                  <use href="src/img/icons.svg#icon-edit"></use>
+                  <use href="img/icons.svg#icon-edit"></use>
                 </svg>
                 <span>Add recipe</span>
               </button>
@@ -47,7 +46,7 @@
             <li class="nav__item">
               <button class="nav__btn nav__btn--bookmarks">
                 <svg class="nav__icon">
-                  <use href="src/img/icons.svg#icon-bookmark"></use>
+                  <use href="img/icons.svg#icon-bookmark"></use>
                 </svg>
                 <span>Bookmarks</span>
               </button>
@@ -56,7 +55,7 @@
                   <div class="message">
                     <div>
                       <svg>
-                        <use href="src/img/icons.svg#icon-smile"></use>
+                        <use href="img/icons.svg#icon-smile"></use>
                       </svg>
                     </div>
                     <p>
@@ -67,7 +66,7 @@
                   <!-- <li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
-                        <img src="src/img/test-1.jpg" alt="Test" />
+                        <img src="img/test-1.jpg" alt="Test" />
                       </figure>
                       <div class="preview__data">
                         <h4 class="preview__name">
@@ -90,14 +89,14 @@
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
-                <img src="src/img/test-1.jpg" alt="Test" />
+                <img src="img/test-1.jpg" alt="Test" />
               </figure>
               <div class="preview__data">
                 <h4 class="preview__title">Pasta with Tomato Cream ...</h4>
                 <p class="preview__publisher">The Pioneer Woman</p>
                 <div class="preview__user-generated">
                   <svg>
-                    <use href="src/img/icons.svg#icon-user"></use>
+                    <use href="img/icons.svg#icon-user"></use>
                   </svg>
                 </div>
               </div>
@@ -109,14 +108,14 @@
         <div class="pagination">
           <!-- <button class="btn--inline pagination__btn--prev">
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-left"></use>
+              <use href="img/icons.svg#icon-arrow-left"></use>
             </svg>
             <span>Page 1</span>
           </button>
           <button class="btn--inline pagination__btn--next">
             <span>Page 3</span>
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-right"></use>
+              <use href="img/icons.svg#icon-arrow-right"></use>
             </svg>
           </button> -->
         </div>
@@ -136,7 +135,7 @@
         <div class="message">
           <div>
             <svg>
-              <use href="src/img/icons.svg#icon-smile"></use>
+              <use href="img/icons.svg#icon-smile"></use>
             </svg>
           </div>
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
@@ -144,14 +143,14 @@
 
         <!-- <div class="spinner">
           <svg>
-            <use href="src/img/icons.svg#icon-loader"></use>
+            <use href="img/icons.svg#icon-loader"></use>
           </svg>
         </div> -->
 
         <!-- <div class="error">
             <div>
               <svg>
-                <use href="src/img/icons.svg#icon-alert-triangle"></use>
+                <use href="img/icons.svg#icon-alert-triangle"></use>
               </svg>
             </div>
             <p>No recipes found for your query. Please try again!</p>
@@ -159,7 +158,7 @@
 
         <!--
         <figure class="recipe__fig">
-          <img src="src/img/test-1.jpg" alt="Tomato" class="recipe__img" />
+          <img src="img/test-1.jpg" alt="Tomato" class="recipe__img" />
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
           </h1>
@@ -168,14 +167,14 @@
         <div class="recipe__details">
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-clock"></use>
+              <use href="img/icons.svg#icon-clock"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--minutes">45</span>
             <span class="recipe__info-text">minutes</span>
           </div>
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-users"></use>
+              <use href="img/icons.svg#icon-users"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--people">4</span>
             <span class="recipe__info-text">servings</span>
@@ -183,12 +182,12 @@
             <div class="recipe__info-buttons">
               <button class="btn--tiny btn--increase-servings">
                 <svg>
-                  <use href="src/img/icons.svg#icon-minus-circle"></use>
+                  <use href="img/icons.svg#icon-minus-circle"></use>
                 </svg>
               </button>
               <button class="btn--tiny btn--increase-servings">
                 <svg>
-                  <use href="src/img/icons.svg#icon-plus-circle"></use>
+                  <use href="img/icons.svg#icon-plus-circle"></use>
                 </svg>
               </button>
             </div>
@@ -196,12 +195,12 @@
 
           <div class="recipe__user-generated">
             <svg>
-              <use href="src/img/icons.svg#icon-user"></use>
+              <use href="img/icons.svg#icon-user"></use>
             </svg>
           </div>
           <button class="btn--round">
             <svg class="">
-              <use href="src/img/icons.svg#icon-bookmark-fill"></use>
+              <use href="img/icons.svg#icon-bookmark-fill"></use>
             </svg>
           </button>
         </div>
@@ -211,7 +210,7 @@
           <ul class="recipe__ingredient-list">
             <li class="recipe__ingredient">
               <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
+                <use href="img/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__quantity">1000</div>
               <div class="recipe__description">
@@ -222,7 +221,7 @@
 
             <li class="recipe__ingredient">
               <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
+                <use href="img/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__quantity">0.5</div>
               <div class="recipe__description">
@@ -247,7 +246,7 @@
           >
             <span>Directions</span>
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-right"></use>
+              <use href="img/icons.svg#icon-arrow-right"></use>
             </svg>
           </a>
         </div>
@@ -321,7 +320,7 @@
 
         <button class="btn upload__btn">
           <svg>
-            <use href="src/img/icons.svg#icon-upload-cloud"></use>
+            <use href="img/icons.svg#icon-upload-cloud"></use>
           </svg>
           <span>Upload</span>
         </button>
