--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
                 <span>Search</span>
             </button>
         </form>
+        <div>
+            <a href="https://forkify-api.herokuapp.com/phrases.html" class="btn available__recipe" target="_blank">See available recipe</a>
+        </div>
         <div class="likes">
             <div class="likes__field">
                 <svg class="likes__icon">
