--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 
       <div class="search-results">
         <ul class="results">
+          <a href="#5ed6604591c37cdc054bcd86">rec 1</a>
+
+          <a href="#5ed6604591c37cdc054bcebc">rec 2</a>
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
